renewed cv-getmach-music-is-the-answer

--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -3,7 +3,6 @@ title: "Music Is The Answer"
 publishedAt: "2025-11-30"
 summary: "Персональное"
 tags: "programming, autobiography, me"
-image: "/photos/ivan-808.jpg"
 ---
 
 Привет !
@@ -14,9 +13,6 @@ image: "/photos/ivan-808.jpg"
 Я практически с самого детства хотел писать музыку. А когда появились компьютеры это стало возможным и не таким дорогим. 
 Это казалось мне невероятно увлекательным и вдохновляющим. 
 А сама музыка всегда поднимала настроение, давала энергию и хотелось двигаться в ритм. 
-
-<img src="/photos/studio.jpg" alt="Ablic" width="400" />
-
 В начале нулевых я жил в Ростове На Дону, там же начал играть как dj, пробовать писать своё.
 А чуть позже познакомившись с такими же увлеченными людьми, меня начали звать на радио, и играть на небольших вечеринках и рейвах.
 Несмотря на то что к концу нулевых танцевальная культура стала убывать или вовсе сходить на нет, мое увлечение плавно перешло в студию и технологии.
@@ -24,8 +20,8 @@ image: "/photos/ivan-808.jpg"
 И в целом иметь вкус, понимать тенденции в электронной музыке. 
 Мне хотелось расти в этой профессии, я изучал эту интересную науку.
 Конечно это принесло свои плоды, а свой первый релиз я выпустил в 2006 году, записав трек вместе с вокалом Марины Броневич, в стиле jazzy deep house, релиз был выпущен на SSI records. 
-
 Так сложилось что в России электроника имеет скорее "точечную популярность" по сравнению с западом где танцевальная культура давно уже является нормальностью (середины 80-х годов).
+<img src="/photos/ableton.png" alt="Ableton Live" width="400" />
 В Европе это экономически здоровая индустрия с выпуском музыки, громкими событиями и фестивалями которые приносят огромную прибыль, 
 и создают экономику и инфраструктуру вокруг этого социального явления. 
 Танцы в выходные - это нормальность! А танцующий человек скорее символ счастливой и успешной жизни чем что то другое. 
@@ -39,7 +35,7 @@ image: "/photos/ivan-808.jpg"
 В начале что то в FoxDot, SuperCollider. Думаю - это так глупо писать синтаксические конструкции и не понимать что это все значит.
 JavaScript, Python ! В начале ничего не понятно, но очень хочется понять ! Английский спасает в таких ситуациях.
 В итоге залез по уши в это все. И мне нравится!
-
+<img src="/photos/studio.jpg" alt="Different Gears" width="400" />
 Позже я решил - раз такая хуйня, а что если всерьёз заняться Python, а со временем — попробовать устроиться на работу разработчиком.
 А вдруг получится? За одно и музыке поможет это все! Я имею в виду хорошая профессия, от которой блевать не тянет, она по любому позитивно повлияет на все!
 Что я хочу сказать:
