renewed cv-getmach-music-is-the-answer

--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -3,11 +3,10 @@ title: "Music Is The Answer"
 publishedAt: "2025-11-30"
 summary: "Персональное"
 tags: "programming, autobiography, me"
+image: "/photos/super-ivan.jpg"
 ---
 
 Привет !
-<img src="/photos/super-ivan.jpg" alt="Ivan Stereotekk" width="400" />
-
 
 У меня есть увлечение, которое, пожалуй, немного больше, чем просто хобби — это электронная музыка.
 Я практически с самого детства хотел писать музыку. А когда появились компьютеры это стало возможным и не таким дорогим. 
