content: macbook recovery plus ubuntu install

--- a/content/mac-os-with-ubuntu.mdx
+++ b/content/mac-os-with-ubuntu.mdx
@@ -12,8 +12,8 @@ image: "/photos/macbook.jpg"
 
 >  "Не так давно пришлось "снести" систему на моем MacBook Pro, как альтернативу поставил "Linux Ubuntu 24.04". 
 >  Все ок для разработки, но для мультимедиа дел все таки поинтересней будет MacOS! 
->  На Ubuntu не поставишь Ableton Live и VST плагины и нужный софт.
->  Решил установить две ОС для удобства. "
+>  На Ubuntu не поставишь Ableton Live и VST плагины и другой нужный софт.
+>  Решил установить на чистый диск две ОС для удобства."
 
 
 
@@ -109,6 +109,10 @@ Format - 'ext4'
 
 Потом 'OK', затем 'Install Now'... Установка второй ОС началась !
 
+---
+#### Выбор системы
+
+Включая макбук  удерживаем 'Option'/'Alt', выбираем на какой ОС работать.
 
 ---
 
