cont; good commit

--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -39,14 +39,14 @@ image: "/photos/super-ivan.jpg"
 
 Так или иначе я продолжаю жить этим, изучаю технологии производства музыки. 
 Смотрю новое, какие тенденций в этом направлении есть, что появляется, что то пробую использовать, играть...
-Так органично, или интуитивно я подобрался к идее писать музыку кодом, программировать. А потом хуяк и затянуло...
+Так органично, или интуитивно я подобрался к идее писать музыку кодом, программировать. А потом затянуло...
 В начале что то в FoxDot, SuperCollider. Думаю - это так глупо писать синтаксические конструкции и не понимать что это все значит.
 JavaScript, Python ! В начале ничего не понятно, но очень хочется понять ! Английский спасает в таких ситуациях.
 В итоге залез по уши в это все. И мне нравится!
 
 <img src="/photos/studio.jpg" alt="Different Gears" width="400" />
 
-Позже я решил - раз такая хуйня, а что если всерьёз заняться Python, а со временем — попробовать устроиться на работу разработчиком.
+Позже я решил - а что если всерьёз заняться Python, а со временем — попробовать устроиться на работу разработчиком.
 А вдруг получится? За одно и музыке поможет это все! Я имею в виду хорошая профессия, от которой блевать не тянет, она по любому позитивно повлияет на все!
 Что я хочу сказать:
 Я самоучка а не дрочила всезнайка. У меня не было цели быть ходячей библиотекой, но я искренне верю, что сегодня можно получить качественные знания о технологиях,
@@ -73,9 +73,6 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 
 Что еще...? Регулярно читаю статьи, блоги и документацию, чтобы повышать уровень и развивать свою культуру.
 Мне очень нравится профессия разработчика — так вышло!
-Возможно некоторым покажется что мой возраст не располагает к динамике и развитию, но уверяю вас это не так!
-Внутренне, впрочем как и визуально я чувствую себя вполне энергичным, и мне комфортно с энергичными людьми, чаще моложе чем я сам.
-В общем впизду эйджизм! 
 Как минимум я хочу развиваться, получать больше практики и совершенствоваться в этом ремесле. Добиваться поставленных перед собой целей !
 
 
