--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -49,8 +49,8 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 Позже я решил - а что если всерьёз заняться Python, а со временем — попробовать устроиться на работу разработчиком.
 А вдруг получится? За одно и музыке поможет это все! Я имею в виду хорошая профессия, от которой блевать не тянет, она по любому позитивно повлияет на все!
 Что я хочу сказать:
-Я самоучка а не дрочила всезнайка. У меня не было цели быть ходячей библиотекой, но я искренне верю, что сегодня можно получить качественные знания о технологиях,
-имея лишь желание и доступ к Интернету. Комбинируя эту возможность с хорошими книгами, документацией (лучше на английском) можно получить то чего хочешь. 
+Я самоучка и точно не всезнайка. У меня не было цели быть библиотекой на двух ногах, но я искренне верю, что сегодня можно получить качественные знания о технологиях,
+имея лишь желание и доступ к Интернету. Комбинируя эту возможность с хорошими книгами, документацией можно получить то чего хочешь. 
 В сети есть все что нужно хорошему человеку чтоб получить успех !
 
 
