--- a/content/osi-model-conspect.mdx
+++ b/content/osi-model-conspect.mdx
@@ -1,10 +1,27 @@
 ---
-title: "7"
+title: "OSI Model - 7 layers "
 publishedAt: "2025-06-18"
-summary: "7"
+summary: "OSI Model 7 layers"
 tags: "programming, paradigms, agents"
 image: "/photos/iv-gon.png"
 ---
 
-### Приветствую!
+### OSI Model 
+
+The OSI (Open Systems Interconnection) - Набор правил и их объяснение как разные компьютерные системы должны взаимодействовать между собой в сети. 
+OSI модель была разработана и стандартизирована в ISO, это Всемирная Организация Стандартизации.
+OSI Model состоит из 7 слоев, или уроней взаимодействия. Каждый из слоев имеет свой специфический функционал, и каждый слой выполняет определенную работу в сети. 
+Этот способ организации взаимодействия облегчает понимание логики устройства сети, и объясняет как происходит взаимодействие устойств подключенных в сеть.
+
+
+---
+
+
+Application Layer: Applications create the data.
+Presentation Layer: Data is formatted and encrypted.
+Session Layer: Connections are established and managed.
+Transport Layer: Data is broken into segments for reliable delivery.
+Сетевой (Network Layer): Segments are packaged into packets and routed.
+Канальный (Data Link Layer): Пакеты переобразуются в кадры и передаются на следующий уровень.
+Физический (Physical Layer): Кадры переобразуются в биты и передаются по физической среде.
 
