new text edited

--- a/content/collatz-hypothesis.mdx
+++ b/content/collatz-hypothesis.mdx
@@ -6,6 +6,7 @@ tags: "Configuration, Web development"
 ---
 
 ### Гипотеза Коллатца
+Вычитал интересную гепотезу которую решил сохранить себе.
 Для объяснения сути гипотезы рассмотрим следующую последовательность чисел, 
 называемую сираку́зской после́довательностью. Берём любое натуральное число n.
 Если оно чётное, то делим его на 2, а если нечётное, то умножаем на 3 и прибавляем 1 
@@ -40,4 +41,10 @@ print(*collatz(114))
 ```
 
 
+
+### Почему это «Гипотеза», а не «Теорема»
+
+Недоказанность: Никто до сих пор не смог предоставить универсальное доказательство того, что это работает для всех натуральных чисел. 
+Сложность: Проблема обманчиво проста, но невероятно сложна. Математики называют её «болотом», в которое легко попасть, но сложно выбраться. 
+Прорыв: Математик Теренс Тао в 2019 году показал, что гипотеза верна «почти» для всех чисел, что стало значительным шагом, но не полным доказательством. 
 Такие дела...
