--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -35,7 +35,7 @@ image: "/photos/super-ivan.jpg"
 
 Понимая все происходящее мне всегда хотелось делать карьеру артиста там где это актуально. 
 Но ситуация которая складывается вокруг меня не распологает к переезду в эпицентр культуры,
-хотя я готовил себя к этому много лет. Учил технологии, язык, изучал как утроена индустрия. 
+хотя я готовил себя к этому много лет. Учил технологии, язык, изучал как уcтроена индустрия. 
 
 Так или иначе я продолжаю жить этим, изучаю технологии производства музыки. 
 Смотрю новое, какие тенденций в этом направлении есть, что появляется, что то пробую использовать, играть...
