--- a/content/osi-model-conspect.mdx
+++ b/content/osi-model-conspect.mdx
@@ -11,10 +11,29 @@ image: "/photos/iv-gon.png"
 The OSI (Open Systems Interconnection) - Набор правил и их объяснение как разные компьютерные системы должны взаимодействовать между собой в сети. 
 OSI модель была разработана и стандартизирована в ISO, это Всемирная Организация Стандартизации.
 OSI Model состоит из 7 слоев, или уроней взаимодействия. Каждый из слоев имеет свой специфический функционал, и каждый слой выполняет определенную работу в сети. 
-Этот способ организации взаимодействия облегчает понимание логики устройства сети, и объясняет как происходит взаимодействие устойств подключенных в сеть.
+Этот способ организации взаимодействия облегчает понимание логики устройства сети, и объясняет как происходит взаимодействие устройств подключенных в сеть.
 
 
 ---
+
+
+
+Физический (Physical): Отвечает за передачу сырых битов по кабелю или беспроводному каналу (электрические сигналы, кабели, коннекторы).
+Канальный (Data Link): Обеспечивает передачу данных между двумя узлами в одной сети, контроль ошибок и потока (MAC-адреса, Ethernet).
+Сетевой (Network): Определяет маршрутизацию пакетов через разные сети (IP-адресация, маршрутизаторы).
+Транспортный (Transport): Гарантирует надежную доставку данных между приложениями (TCP/UDP, сегментация, контроль потока).
+Сеансовый (Session): Управляет сеансами связи между приложениями (установка, поддержание и завершение диалога).
+Представления (Presentation): Преобразует данные в формат, понятный приложению (шифрование, сжатие, форматирование).
+Прикладной (Application): Предоставляет сетевые службы непосредственно приложениям пользователя (HTTP, FTP, SMTP). 
+
+
+
+
+
+
+
+
+
 
 
 Application Layer: Applications create the data.
@@ -25,3 +44,13 @@ Transport Layer: Data is broken into segments for reliable delivery.
 Канальный (Data Link Layer): Пакеты переобразуются в кадры и передаются на следующий уровень.
 Физический (Physical Layer): Кадры переобразуются в биты и передаются по физической среде.
 
+
+
+
+
+
+### Функции физического уровня.
+- **Битовая синхронизация** - производится при помощи clock контроля передаваемых данных и принимаемых другой стороной.
+- **Битовый контроль скорости** - производится контролем или подсчетом передаваемых битов в секунду .
+- **Контроль топологии сети** - определение топологии сети шина \ звезда \ mesh.
+- **Контроль режима передачи** - определяет тип и передачу данных симплекс \ дуплекс \ полу-дуплекс. 
