--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -117,14 +117,14 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 Я не понимаю все ли правильно в нашей свами ситуации, верным путем мы идем, или я и такие как я идем отдельно куда то не туда ? 
 В демократию как декларировалось в начале пути молодой России, или куда вообще ? 
 Что делать мне простому человеку с размазаной судьбой по бывшему СССР ?
-Сейчас у меня двое детей, я не могу найти постоянную работу с мая месяца, хотя учился быть звукарем, бекенд разработчиком, инженером и вроде неплохо разобрался в себе и в своих перспективах относительно профессий. Хотя официального образования я так и не получил. Не имел такой возможности !
+Сейчас у меня двое детей, я не могу найти постоянную работу с мая месяца, хотя учился быть звукарем, бекенд разработчиком, инженером и вроде неплохо разобрался во всем этом, в себе и в своих перспективах относительно профессий. Хотя официального образования я так и не получил. Не имел такой возможности !
 От этого непонимания у меня кругом голова, и я хочу остановить все это дерьмо которе преследует меня с самого детства. 
 Какие то сплошные перестройки, войны, развалы идеологий с поворотами в разные стороны, раскачки, ненависть, и поливания дерьмом. Залито им все, и все грязное и унылое ! Неужели не видно ?
 С одной стороны мне хочется жить тут, чтоб было спокойно, без конфликтов, мирно, уважали мои идеи, гражданскую позицию, мой взгляд на будущее этой страны. Мое мнение и точка зрения имела возможность быть услышаной.  Хочу хороших и правильных вещей которые должны быть в нормальной стране ! Их нет ! У меня вообще ничего нет кроме моих знаний из интернета, и моей истории и музыки. 
 Мне даже негде жить если честно ! 
 Меня очень сильно разочаровали эти годы прожитые тут. 
 Я без работы, без жилья а впереди что то вообще не то о чем мечтал.
-Вообще не понимаю что со мной будет завтра, и что делать. 
+Вообще не понимаю что со мной будет завтра, и что делать. Куда потрачена жизнь.
 Что делать сэтим всем непонятно !
 
 
