--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -79,11 +79,14 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 
 #### Если понадобится:
 
-<a href='https://www.youtube.com/@stereotekk_ivan' >Музука и видео тут.</a>
+<a href='https://www.youtube.com/@Ivan_Stereotekk' >Музука и видео тут.</a>
 
 #### или тут:
 
 <a href='https://www.beatport.com/artist/ivan-stereotekk/394712?srsltid=AfmBOoqcFqCXVxeBTVk3CN8XtER8RfUgiFcfze_r3xpqOv4p-uRmdblD'> или в music stores </a>
+
+
+#### Current situation:
 
 
 Как мне кажется я попал в какую то странную ситуацию. Я пока не могу найти решение для нее но вопрос назревший и уверен не только для меня.
@@ -125,6 +128,25 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 Меня очень сильно разочаровали эти годы прожитые тут. 
 Я без работы, без жилья а впереди что то вообще не то о чем мечтал.
 Вообще не понимаю что со мной будет завтра, и что делать. Куда потрачена жизнь.
-Что делать сэтим всем непонятно !
+Есть невероятное желание изменить текущее состояние дел и улучшить пространство в котором живу я !
+
+Подписывайтесь на канал музыканта:
 
 
+<a href="https://www.youtube.com/@Ivan_Stereotekk"> YouTube Channel.</a>
+
+
+<a href="https://share.google/rOHr360Y5tcRxlalM"> Web Area.</a>
+
+
+Вроде мы все люди уже давно в веке современных технологий, у нас нано частицы консолидируются в кластеры, в объекты, летаем в космос, есть микроэлетроника, квантовые компьютеры.
+Практически научились считывать мозг, и нейронную активность, быстро выращивать растения и еду.
+Но вместе с этим часть из нас все еще голодны, необразованы и многих из нас не закрыты базовые потребности такие как дом, тепло, еда, и простая человеческая любовь 
+и уважение к друг другу. Мы навязяли себе мнение что мы люди "Венец Творения", но при этом из за глупости, агрессии чаще всего маленькой группы людей, страдают миллионы.
+Нам нужен анализ, пересмотр логики и здравого смысла. Хорошо бы чтоб это делал каждый сам но исходя из главного правила.
+"Относись к людям так как хочешь чтоб относились к тебе".
+одно правило которое изменит весь мир и нашу цивилизацию !
+
+В этом тексте нет моей мании величия, я просто размышляю как разработчик или современный человек. Я верю что мое тело, это организм, который состоит  из молекеул и частиц. 
+Каждая частичка делает свое, а вместе они большой организм. Чем это отличается от социального договора ?
+Нам нужен социальный договор который живет гармонично, а вместе один живучий и красивый организм. Иначе мы просто крякнем )) !
