--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -86,7 +86,7 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 <a href='https://www.beatport.com/artist/ivan-stereotekk/394712?srsltid=AfmBOoqcFqCXVxeBTVk3CN8XtER8RfUgiFcfze_r3xpqOv4p-uRmdblD'> или в music stores </a>
 
 
-#### Current situation:
+####  Иногда чтоб снять эмоциональное напряжение пишу текст о наболевшем :
 
 
 Как мне кажется я попал в какую то странную ситуацию. Я пока не могу найти решение для нее но вопрос назревший и уверен не только для меня.
