--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Music Is The Answer"
+title: "Немного про хобби - Music Is The Answer"
 publishedAt: "2025-11-30"
 summary: "Персональное"
 tags: "programming, autobiography, me"
