--- a/content/osi-model-conspect.mdx
+++ b/content/osi-model-conspect.mdx
@@ -54,3 +54,6 @@ Transport Layer: Data is broken into segments for reliable delivery.
 - **Битовый контроль скорости** - производится контролем или подсчетом передаваемых битов в секунду .
 - **Контроль топологии сети** - определение топологии сети шина \ звезда \ mesh.
 - **Контроль режима передачи** - определяет тип и передачу данных симплекс \ дуплекс \ полу-дуплекс. 
+
+
+В процессе...
