osi model explain

--- a/content/osi-model-conspect.mdx
+++ b/content/osi-model-conspect.mdx
@@ -8,13 +8,13 @@ image: "/photos/iv-gon.png"
 
 ### OSI Model 
 
-The OSI (Open Systems Interconnection) - Набор правил и их объяснение как разные компьютерные системы должны взаимодействовать между собой в сети. 
-OSI модель была разработана и стандартизирована в ISO, это Всемирная Организация Стандартизации.
-OSI Model состоит из 7 слоев, или уроней взаимодействия. Каждый из слоев имеет свой специфический функционал, и каждый слой выполняет определенную работу в сети. 
-Этот способ организации взаимодействия облегчает понимание логики устройства сети, и объясняет как происходит взаимодействие устройств подключенных в сеть.
 
 
----
+
+The OSI (Open Systems Interconnection) - Набор правил и их объяснение как разные компьютерные системы должны взаимодействовать между собой в сети. OSI модель была разработана и стандартизирована в ISO, это Всемирная Организация Стандартизации.
+OSI Model состоит из 7 слоев, или уроней взаимодействия. Каждый из слоев имеет свой специфический функционал, и каждый слой выполняет определенную работу в сети. Этот способ организации взаимодействия облегчает понимание логики устройства сети, и объясняет как происходит взаимодействие устойств подключенных в сеть.
+
+
 
 
 
@@ -30,30 +30,75 @@ OSI Model состоит из 7 слоев, или уроней взаимоде
 
 
 
+### Физический уровень
+
+Функции:
+Передача данных бит в бит, выбор способа передачи данных (радио, провод), кодирование цифровых сигналов.
+- Битовая синхронизация - производится при помощи clock контроля передаваемых данных и принимаемых другой стороной.
+- Битовый контроль скорости производится контролем или подсчетом передаваемых битов в секунду .
+- Контроль топологии сети - определение топологии сети шина \ звезда \ mesh.
+- Контроль режима передачи - определяет тип и передачу данных симплекс \ дуплекс \ полу-дуплекс. 
 
 
 
 
+### Канальный уровень
+Функции:
+Обеспечении безошибочной доставки данных поверх физического уровня.
+- Ответственен за доставку пакета по сети к узлу (IP address) определенному при помощи МАС адреса, взаимодействуя с уровнем выше (сетевой).
+- Упаковывает в кадры. Пакет на канальном уровне ссылается на кадр.
+- свитчи и бриджи это устройства канального уровня.
+- Пакет пришедший с сетевого уровня разделяется на кадры соответственно параметрам установленным сетевым интерфейсом.  
+- инкапсулирует в хедерс MAC адресы, отправителя и получателя.
+- широковещательным запросом "Кому принадлежит МАС адрес ...? " получает ответ в виде IP адреса.
+Спецификация IEEE 802 разделяет этот уровень на два подуровня Media Access Control (MAC) и второй подуровень Logical Link Control (LLC).
+В компьютерах функции канального уровня берет на себя обычно драйвер сетевой платы.
+Протоколы канального уровня:
+	ARCnet, ATM, Cisco Discovery Protocol, CAN, Ethernet, PPP, Token Ring, SLIP
+	и другие.
 
 
-Application Layer: Applications create the data.
-Presentation Layer: Data is formatted and encrypted.
-Session Layer: Connections are established and managed.
-Transport Layer: Data is broken into segments for reliable delivery.
-Сетевой (Network Layer): Segments are packaged into packets and routed.
-Канальный (Data Link Layer): Пакеты переобразуются в кадры и передаются на следующий уровень.
-Физический (Physical Layer): Кадры переобразуются в биты и передаются по физической среде.
+### Сетевой уровень
+Функции:
+Обеспечивает определение маршрута, пути передачи данных - Роутинг.
+- Транслирует логические адреса и имена в физические
+- Определяет кратчайшие пути
+- Коммутация и маршрутизация
+- Отслеживание неполадок и заторов по пути 
+- Сервисные сообщения сети
+Протоколы сетевого уровня:
+		ARP, ICMP, OSPF, IPsec, RIP, IP, IPv4, IPv6, IPX
 
 
+### Транспортный уровень
+Функции:
+Предоставляет механизм передачи данных взависимости от выбранного протокола TCP или UDP. Фрагментирует данные в дэйтаграмы в случае UDP или сегменты в случае TCP размер которых зависит от протокола. Длинные разбивает а короткие объеденяет в один.
+- Определяет способ упаковки данных
+- Сегментирует в случае TCP
+- Формирует дейтаграмы в случае UDP
+- Проверка целостности данных
+Протоколы транспортного уровня:
+		TCP, UDP, NetBIOS, SCTP, NBF, CUDP, DCCP
+
+### Сеансовый уровень
+Функции:
+Уровень управляет созданием, завершением или возобновлением сеансов между приложениями, синхронизирует задачи, распределяет права на создание или поддержание сеанса связи между приложениями.
+- Инициация сенансов
+- Завершение сеансов
+- Возобновление сеансов
+- Помещение конрольных точек к передаваемым данным
+- Синхронизация
+Протоколы сеансового уровня:
+	RPC, L2TP, ASP, PPTP, RTCP, SDP, SMPP
 
 
+### Уровень представления 
+Функции:
+Уровень огрганизует переобразование данных в понятный для приложений формат и формат для отправки по сети. Кодирует или декодирует данные перед отправкой или перед чтением данных приложениями. На этом уровне может происходить сжатие, шифрование, кодировка данных и подготовка для транспорта или наоборот распаковка перед чтением приложениями. На этом уровне так же происходит перенаправление на другие ресурсы в случае невозможности обработать локально.
+- Шифрование и кодирование
+- Сжатие и распаковка 
+- Перенаправление 
+Протоколы уровня представления:
+		XDR, RDP, AFP, LPP
 
-
-### Функции физического уровня.
-- **Битовая синхронизация** - производится при помощи clock контроля передаваемых данных и принимаемых другой стороной.
-- **Битовый контроль скорости** - производится контролем или подсчетом передаваемых битов в секунду .
-- **Контроль топологии сети** - определение топологии сети шина \ звезда \ mesh.
-- **Контроль режима передачи** - определяет тип и передачу данных симплекс \ дуплекс \ полу-дуплекс. 
-
-
-В процессе...
+Статья будет дополнена !
