osi model explain

--- a/content/osi-model-conspect.mdx
+++ b/content/osi-model-conspect.mdx
@@ -1,5 +1,5 @@
 ---
-title: "OSI Model - 7 layers "
+title: "OSI Model - 7 layers - Сетевая модель OSI (памятка)"
 publishedAt: "2025-06-18"
 summary: "OSI Model 7 layers"
 tags: "programming, paradigms, agents"
@@ -58,6 +58,8 @@ OSI Model состоит из 7 слоев, или уроней взаимоде
 	и другие.
 
 
+
+
 ### Сетевой уровень
 Функции:
 Обеспечивает определение маршрута, пути передачи данных - Роутинг.
@@ -68,6 +70,8 @@ OSI Model состоит из 7 слоев, или уроней взаимоде
 - Сервисные сообщения сети
 Протоколы сетевого уровня:
 		ARP, ICMP, OSPF, IPsec, RIP, IP, IPv4, IPv6, IPX
+
+
 
 
 ### Транспортный уровень
@@ -101,4 +105,8 @@ OSI Model состоит из 7 слоев, или уроней взаимоде
 Протоколы уровня представления:
 		XDR, RDP, AFP, LPP
 
-Статья будет дополнена !
+
+
+
+
+Очень кратко. Дополню позже ! 
