osi model explain

--- a/content/osi-model-conspect.mdx
+++ b/content/osi-model-conspect.mdx
@@ -18,15 +18,23 @@ OSI Model состоит из 7 слоев, или уроней взаимоде
 
 
 
-Физический (Physical): Отвечает за передачу сырых битов по кабелю или беспроводному каналу (электрические сигналы, кабели, коннекторы).
-Канальный (Data Link): Обеспечивает передачу данных между двумя узлами в одной сети, контроль ошибок и потока (MAC-адреса, Ethernet).
-Сетевой (Network): Определяет маршрутизацию пакетов через разные сети (IP-адресация, маршрутизаторы).
-Транспортный (Transport): Гарантирует надежную доставку данных между приложениями (TCP/UDP, сегментация, контроль потока).
-Сеансовый (Session): Управляет сеансами связи между приложениями (установка, поддержание и завершение диалога).
-Представления (Presentation): Преобразует данные в формат, понятный приложению (шифрование, сжатие, форматирование).
-Прикладной (Application): Предоставляет сетевые службы непосредственно приложениям пользователя (HTTP, FTP, SMTP). 
+**Физический (Physical):** Отвечает за передачу сырых битов по кабелю или беспроводному каналу (электрические сигналы, кабели, коннекторы).
+
+**Канальный (Data Link):** Обеспечивает передачу данных между двумя узлами в одной сети, контроль ошибок и потока (MAC-адреса, Ethernet).
+
+**Сетевой (Network):** Определяет маршрутизацию пакетов через разные сети (IP-адресация, маршрутизаторы).
+
+**Транспортный (Transport):** Гарантирует надежную доставку данных между приложениями (TCP/UDP, сегментация, контроль потока).
+
+**Сеансовый (Session):** Управляет сеансами связи между приложениями (установка, поддержание и завершение диалога).
+
+**Представления (Presentation):** Преобразует данные в формат, понятный приложению (шифрование, сжатие, форматирование).
+
+**Прикладной (Application):** Предоставляет сетевые службы непосредственно приложениям пользователя (HTTP, FTP, SMTP). 
 
 
+
+###Подробнее о каждом уровне:
 
 
 
