--- a/content/osi-model-conspect.mdx
+++ b/content/osi-model-conspect.mdx
@@ -1,9 +1,9 @@
 ---
 title: "OSI Model - 7 layers - Сетевая модель OSI (памятка)"
-publishedAt: "2025-06-18"
+publishedAt: "2026-01-03"
 summary: "OSI Model 7 layers"
-tags: "programming, paradigms, agents"
-image: "/photos/iv-gon.png"
+tags: "network, paradigms, osi-model"
+image: "/photos/osim.png"
 ---
 
 ### OSI Model 
