ollama fu-calls

--- a/content/ollama-tool-call.mdx
+++ b/content/ollama-tool-call.mdx
@@ -7,37 +7,40 @@ tags: "ollama,python,tool_calls,function calls"
 
 
 
-Представьте, что у вас есть чат-бот в Telegram или  на сайте. 
+Представьте, что у вас есть чат для общения с клиентами в Telegram, WhatsApp или на сайте. В нем ваши потенциальные клиенты общаются с нейронкой ИИ продавцом.
 
-Люди пишут ему: 
+Люди пишут ему (напрмер): 
 
-«Хочу купить 3 пачки гвоздей и 2 игрушки для кошки». 
-Вместо того чтобы просто «понять» сообщение, бот сам вызывает нужную функцию, создает заказ и 
-даже считает общую сумму, выкатывает счет — всё без участия человека. 
-Или, например, бухгалтер задаёт голосом: «Сколько нужно доплатить, если я уже отдал 10000, а должен был 13200?» — 
-И ваш бот ассистент моментально даёт ответ... А бонусом высылает счет, накладную или что там еще нужно..?
-Это и есть tool calls — когда искусственный интеллект не просто разговаривает с клиентами, а сам инициирует выполнение нужного кода. 
-Я уже делал подобное на API open.ai, но заставить работать подобное приложение у себя на компьютере еще не пробовал. 
-В общем решил попробовать подняв Ollama на своём Mac.
+«Хочу купить 3 пачки гвоздей и 2 игрушки для любимой кошки ! Расскажите про гвозди..!». 
+Нейрпонный ИИ ассистент-продажник сам вызывает нужную функцию, создает заказ, считает суммы, "выкатывает" счет — всё без участия человека! 
+Или, например, бухгалтер задаёт вопрос: «Сколько нужно доплатить, если я уже отдала 10000, а мы вам должены были 13200?».
+ИИ ассистент моментально даёт ответ... А бонусом в случае необходимости высылает счет, накладную или что там еще нужно для отчетов и оплаты в вашем бизнесе..?
+Это и есть tool calls (function calling) — когда искусственный интеллект не просто разговаривает с клиентами, а сам инициирует выполнение нужных действий. 
+В любом бизнесе много таких действий (функций), как правило почти все они могут быть реализованы программно на языке программирования. 
+Выслать письмо, создать pdf документ, накладную, сделать звонок кому-то, снимок чего либо, измерить что либо.
+Как правило это просто функции которые можно вызывать в на компьютере. Все зависит от бизнес процессов и фантазии разработчика который решил автоматизировать бизнес процессы. 
+Я уже делал подобное на API open.ai, но заставить целиком работать подобное приложение у себя на компьютере еще не пробовал. Только используя внешние вспомогательные сервисы и рессурсы.
+На этот раз я решил попробовать запустив ИИ Ollama на своём MacBook, настроить его так чтоб он анлизировал всю поступающую из чатов текстовую информацию,
+и реагировать на текст как это обычно делают люди.
 
-Что такое Ollama?
+### Что такое Ollama?
 
 
 Ollama — это среда, песочница или простой способ запускать локальные языковые модели (типа ChatGPT) прямо у себя на компьютере. 
-Не нужно никаких серверов или облаков — всё работает у вас на машине. Удобно, особенно если хочется быстро поэкспериментировать.
+Не нужно никаких серверов или облаков — всё работает у вас на ПК на родном потрепаном ноутбуке с частичками еды в клавиатуре. 
+Удобно, особенно если хочется быстро поэкспериментировать, и не возится разбираясь с VDS/VPS ssh, RDP и еще чем то непонятным.
+Я работал на чикен-МакБуке, но все это делается на любой ОС из тех что вам знакомы (Linux,Mac,Windows)! 
 
 
-#### Установка:
+#### Установка Ollama:
 
 
-Установил Ollama себе на мак:
+Открываем Terminal и пишем такую команду:
 
 ```
 curl -fsSL https://ollama.com/install.sh | sh
 ```
-Запустил модель:
-
-Я выбрал Llama 3.2:
+Запустил нужную модель (я выбрал Llama 3.2):
 
 ```
 ollama run llama3.2
@@ -53,8 +56,9 @@ uv pip install ollama
 #### Простой пример tool calls
 
 Теперь — самая интересная часть. Я написал небольшой код, который подключает две простые функции: сложение и вычитание. 
-А на вход даются аргументы которые ИИ может извлекать из текста сообщения.
-И дал модели понять, когда именно можно их использовать.
+Как я говорил ранее, функции могут быть абсолютно любые ! В качестве очень простого примера я написал две: "сладывалка чисел", "вычиталка чисел".
+А на вход функциям даются аргументы которые ИИ ассистент должен извлекать из текста сообщения.
+Я дал модели понять, когда именно можно их использовать, описав свои требования в системном prompt (description).
 Функции очень простые, чисто для эксперимента. В реальном проекте они могут быть какие угодно. 
 Это уже вопрос вашей фантазии и нужд вашего бизнеса.
 
@@ -143,7 +147,9 @@ if response.message.tool_calls:
 Когда я запустил этот скрипт, модель правильно поняла: «Семь умножить на двенадцать» — это команда на сложение. Она сама вызвала нужную функцию и выдала ответ. Всё без моего участия.
 
 #### Итог:
-Теперь можно расширять этот подход: подключить функции для создания счетов, генерации PDF-документов, работы с базой данных — всё это будет инициироваться обычным человеческим языком.
-Такой вот эксперимент...
+Технология рабочая ! ИИ анализирует входящий текст, извлекает числовые аргументы из текста сообщений, запускает функции если ситуация соответствует критериям и требованиям в моем задании!
+Теперь можно расширять этот подход: 
+например подключить функции для создания счетов, генерации PDF-документов, искать товары в базе данных, работать с базой данных — всё это будет инициироваться нейронным работником, обычным человеческим языком.
+Такой вот эксперимент... Чуть позже разовью идею !
 
 [Ollama docs:](https://ollama.com/blog/tool-support)
