ollama fu-calls

--- a/content/ollama-tool-call.mdx
+++ b/content/ollama-tool-call.mdx
@@ -3,6 +3,7 @@ title: "Ollama на Intel Core i7 - Вызов функций с помощью 
 publishedAt: "2025-04-20"
 summary: "LLM на localhost"
 tags: "ollama,python,tool_calls,function calls"
+image: "/photos/tools.webp"
 ---
 
 
