ollama fu-calls

--- a/content/ollama-tool-call.mdx
+++ b/content/ollama-tool-call.mdx
@@ -13,11 +13,9 @@ image: "/photos/tools.webp"
 Люди пишут ему (напрмер): 
 
 «Хочу купить 3 пачки гвоздей и 2 игрушки для любимой кошки ! Расскажите про гвозди..!». 
-Нейрпонный ИИ ассистент-продажник сам вызывает нужную функцию, создает заказ, считает суммы, "выкатывает" счет — всё без участия человека! 
-Или, например, бухгалтер задаёт вопрос: «Сколько нужно доплатить, если я уже отдала 10000, а мы вам должены были 13200?».
-ИИ ассистент моментально даёт ответ... А бонусом в случае необходимости высылает счет, накладную или что там еще нужно для отчетов и оплаты в вашем бизнесе..?
+ИИ ассистент-продажник анализирует текст, отвечает на вопросы, а в случае необходимости сам вызывает нужную функцию, создает заказ, считает суммы, "выкатывает" счет — всё без участия человека! 
 Это и есть tool calls (function calling) — когда искусственный интеллект не просто разговаривает с клиентами, а сам инициирует выполнение нужных действий. 
-В любом бизнесе много таких действий (функций), как правило почти все они могут быть реализованы программно на языке программирования. 
+В любом бизнесе много таких действий (функций), как правило почти все они могут быть реализованы программно кодом. 
 Выслать письмо, создать pdf документ, накладную, сделать звонок кому-то, снимок чего либо, измерить что либо.
 Как правило это просто функции которые можно вызывать в на компьютере. Все зависит от бизнес процессов и фантазии разработчика который решил автоматизировать бизнес процессы. 
 Я уже делал подобное на API open.ai, но заставить целиком работать подобное приложение у себя на компьютере еще не пробовал. Только используя внешние вспомогательные сервисы и рессурсы.
